Change class from MaintenanceCalendar to ProblemCalendar

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "description": "View Problemss in a Calendar View",
     "actions": {
         "incident.calendar": {
-            "class": "MaintenanceCalendar",
+            "class": "ProblemCalendar",
             "view": "maintenance"
         }
     }
